--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Foto Profil</h1>
-        <img src="C:\Users\LENOVO\Documents\me\1626592672852.JPEG">
+        <img src="1626592672852.JPEG">
         
         <h2>Biodata</h2>
         <p>Nama : Zhillan Andru Atharsad</p>
